# Splice

./: .projectile  README.md  dataset_ingredients.py  flatten_litbank_ner.py  gold_nocoref_vs_coref.py  plot_coref_degradation_metrics.py  plot_degradation_metrics.py  plot_ner_degradation_metrics.py  print_e2e_graph_results.py  print_main_graph_results.py  print_main_task_results.py  pyproject.toml  requirements.txt  xp.py  xp_aug_gains.py  xp_ctx_gains.py  xp_e2e_coref.py  xp_e2e_llm.py  xp_e2e_llm_graphml.py  xp_metrics_over_degradation.py
splice/: analysis.py  corefs.py  data.py  graph_utils.py  metrics.py  ner.py  sacred_utils.py  utils.py
tests/: test_metrics.py
